# doc

./: pyproject.toml
Comando/: tex.tx
doc/: app.py  comentacao_bases.py
doc/templates/: index.html  service_info.html  services.html
