[tool.poetry]
name = "doc"
version = "0.1.0"
description = ""
authors = ["hianny urt <hiannymaria@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
paramiko = "^3.5.0"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
